--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,120 @@
 @import "normalise.scss";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
+  background-color: lightgray;
+}
+
+.content {
+  width: 90%;
+  margin: 2rem auto 4rem auto;
+  border: 1px lightgray solid;
+  overflow: hidden;
+  padding: 24px 0;
+  background-color: white;
+}
+
+.header {
+  padding-top: 100px;
+  display: flex;
+  // justify-content: space-between;
+  width: 100%;
+
+  h4 {
+    // font-size: 0.8125rem;
+    margin: 0 0 4px 0;
+    font-weight: normal;
+    color: gray;
+    // padding-left: 12px;
+  }
+  h1 {
+    margin: 0 0 4px 0;
+    font-size: 1.5rem;
+    line-height: 1.2em;
+  }
+
+  .additionalInfo {
+    font-size: 1rem;
+    font-weight: normal;
+    margin: 0;
+    line-height: 1.5rem;
+  }
+
+  @media (min-width: 940px) {
+    h4 {
+      font-size: 1em;
+    }
+    h1 {
+      font-size: 2rem;
+    }
+    .additionalInfo {
+      font-size: 1em;
+    }
+  }
+}
+
+.bookmark {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  text-align: center;
+  min-width: 100px;
+  height: 200px;
+  border: 1px lightgray solid;
+  margin: -156px 16px 24px 16px;
+
+  .bookmarkInfo {
+    display: flex;
+  }
+}
+
+.buySide {
+  // flex-grow: 1;
+  width: 100%;
+  .bondName {
+    border-left: 4px blue solid;
+    padding-left: 8px;
+  }
+  h4 {
+    padding-left: 0;
+  }
+  .additionalInfo {
+    padding-left: 12px;
+  }
+}
+
+.sellSide {
+  // flex-grow: 1;
+  width: 100%;
+  .bondName {
+    border-right: 4px red solid;
+    padding-right: 8px;
+  }
+  text-align: right;
+  h4 {
+    padding-right: 0;
+  }
+  .additionalInfo {
+    padding-right: 12px;
+  }
+}
+
+.right {
+  text-align: right;
+}
+
+.left {
+  text-align: left;
+}
+
+.borderBottom {
+  border-bottom: 2px lightgray solid;
+  margin-bottom: 8px !important;
+  padding-bottom: 8px;
 }
