--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,3 @@
 @import "normalise.scss";
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 16px;
-}
+@import "theme.scss";
+@import "elements.scss";
