--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,8 @@
+// Import Fontawesome
+@import "./fontawesome/scss/fontawesome.scss";
+@import "./fontawesome/scss/solid.scss";
+@import "./fontawesome/scss/brands.scss";
+
 @import "normalise.scss";
 @import "theme.scss";
 @import "elements.scss";
