--- a/scss/_elements.scss
+++ b/scss/_elements.scss
@@ -13,14 +13,17 @@ body {
 
 h1 {
   margin: 0;
-  margin-bottom: 2rem;
-  font-size: 1.75rem; // 28px
-  line-height: 2rem; // 32px
+  margin-bottom: 1.5rem;
+  font-size: 2rem; // 32px
+  line-height: 2.5rem; // 40px
   font-weight: $bold;
-
-  @media (min-width: 1400px) {
-    font-size: 2rem; // 32px
-    line-height: 2.5rem; // 48px
+  @media (min-width: 768px) {
+    font-size: 3rem; // 48px
+    line-height: 3.5rem; // 56px
+  }
+  @media (min-width: 1024px) {
+    font-size: 4rem; // 64px
+    line-height: 4.5rem; // 72px
   }
 }
 
@@ -30,12 +33,24 @@ h2 {
   font-weight: $semiBold;
   margin: 0;
   margin-bottom: 1rem;
+  @media (min-width: 1024px) {
+    font-size: 3rem; // 48px
+    line-height: 4.5rem; // 64px
+  }
 }
 
 h3 {
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: $semiBold;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+h4 {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: $regular;
   margin: 0;
   margin-bottom: 1rem;
 }
@@ -71,4 +86,10 @@ ol {
     line-height: 1.5rem;
     margin-bottom: 0.5rem;
   }
+}
+
+label {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin: 0;
 }
