--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -25,3 +25,7 @@ $background: $grey6;
 $primaryText: hsla(0, 0, 0, 1);
 $secondaryText: hsla(240, 6, 25, 0.6);
 $tertiaryText: hsla(240, 6, 25, 0.3);
+
+.secondaryText {
+  color: $secondaryText;
+}
