--- a/scss/_theme.scss
+++ b/scss/_theme.scss
@@ -8,7 +8,7 @@ $semiBold: 600;
 $bold: 700;
 
 // Colours
-$tint: darkBlue;
+$tint: hsla(205, 72, 56, 1);
 $primary: lightBlue;
 
 $grey1: hsla(240, 2, 57, 1);
