--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4762,12 +4762,12 @@ body {
   color: black; }
 
 h1 {
-  margin: 0;
-  margin-bottom: 1.5rem;
   font-size: 2rem;
   line-height: 2.5rem;
+  margin: 0;
+  margin-bottom: 1.5rem;
   font-weight: 700; }
-  @media (min-width: 768px) {
+  @media (min-width: 640px) {
     h1 {
       font-size: 3rem;
       line-height: 3.5rem; } }
@@ -4779,47 +4779,115 @@ h1 {
 h2 {
   font-size: 1.5rem;
   line-height: 2rem;
-  font-weight: 600;
+  font-weight: 700;
   margin: 0;
   margin-bottom: 1rem; }
+  @media (min-width: 640px) {
+    h2 {
+      font-size: 2.25rem;
+      line-height: 3rem; } }
   @media (min-width: 1024px) {
     h2 {
       font-size: 3rem;
       line-height: 4.5rem; } }
 
 h3 {
-  font-size: 1rem;
+  font-size: 1.25rem;
   line-height: 1.5rem;
   font-weight: 600;
   margin: 0;
   margin-bottom: 1rem; }
+  @media (min-width: 640px) {
+    h3 {
+      font-size: 1.875rem;
+      line-height: 2.5rem; } }
+  @media (min-width: 1024px) {
+    h3 {
+      font-size: 2.25rem;
+      line-height: 3rem; } }
 
 h4 {
   font-size: 1rem;
   line-height: 1.5rem;
-  font-weight: 500;
+  font-weight: 700;
   margin: 0;
-  margin-bottom: 1rem; }
-
-p {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  font-weight: 500;
-  margin: 0;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
   max-width: 64ch; }
+  @media (min-width: 640px) {
+    h4 {
+      font-size: 1.25rem;
+      line-height: 2rem;
+      font-weight: 600; } }
+  @media (min-width: 1024px) {
+    h4 {
+      font-size: 1.5rem;
+      line-height: 2rem; } }
 
+p,
+input,
+button,
 label {
   font-size: 1rem;
-  line-height: 1.5rem; }
+  line-height: 1.5rem;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 1rem;
+  max-width: 64ch; }
+  @media (min-width: 640px) {
+    p,
+    input,
+    button,
+    label {
+      font-size: 1.25rem;
+      line-height: 2rem;
+      font-weight: 400; } }
+  @media (min-width: 1024px) {
+    p,
+    input,
+    button,
+    label {
+      font-size: 1.5rem;
+      line-height: 2rem; } }
+
+label {
+  font-weight: 600;
+  color: rgba(60, 60, 68, 0.6); }
+
+input,
+button {
+  border-radius: 0.25rem;
+  border: 0;
+  font-weight: 600;
+  padding: 0 1rem;
+  height: 3rem; }
+  @media (min-width: 1024px) {
+    input,
+    button {
+      height: 3.5rem; } }
 
 input[type="text"] {
-  padding: 0.5rem 1rem;
-  line-height: 1.5rem;
-  border-radius: 0.25rem;
-  font-size: 1rem;
-  font-weight: 500;
-  border: 0; }
+  width: 100%;
+  max-width: 20ch;
+  background-color: #d1d1d6; }
+
+button.--primary {
+  background-color: #3e9ce0;
+  color: white; }
+
+a:hover,
+button:hover {
+  background-color: #6ab3e7; }
+
+form {
+  display: flex;
+  flex-direction: column; }
+  form label {
+    margin-bottom: 0; }
+  form input[type="text"] {
+    background-color: white;
+    border: 1px solid #d1d1d6; }
+  form button {
+    align-self: flex-start; }
 
 ol {
   list-style: none;
@@ -4828,11 +4896,8 @@ ol {
     line-height: 1.5rem;
     margin-bottom: 0.5rem; }
 
-label {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  margin: 0;
-  font-weight: 600; }
+.fontAwesome {
+  font-family: "Font Awesome 5 Free", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
 
 .mainContainer {
   padding: 2rem 4%; }
